# libspatialite

./: CMakeLists.txt
cmake/: configure.cmake
examples/: CMakeLists.txt  demo1.c  demo2.c
spatialite/: CMakeLists.txt  shell.c
src/: CMakeLists.txt
src/spatialite/: spatialite.c
